# cem-backend

./: .deployignore  .env.example  .gitignore  DEB_PACKAGE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.txt  EMAIL_TASK_ROUTING_SYSTEM.md  EMAIL_TO_TICKET_GUIDE.md  EMAIL_TO_TICKET_SETUP.env  FREE_HOSTING_GUIDE.md  GOOGLE_CALENDAR_INTEGRATION.md  GUEST_TICKET_SETUP.md  INSTALLATION_COMPLETE.md  INSTALLER_UPDATE_COMPLETE.md  INSTALL_UBUNTU.md  LIVE_UPDATE_GUIDE.md  MANUAL_INSTALL_UBUNTU.md  PROJECT_EMAIL_SUPPORT_GUIDE.md  QUICK_INSTALL.md  QUICK_REFERENCE.md  README.md  TASK_PERMISSIONS.md  TIMEZONE_DEPLOYMENT.txt  add_site_settings_columns.py  alembic.ini  auto_update.bat  check_attachments.py  check_email_settings.py  check_processed_emails.py  check_workspace.py  configure_kyotech_email.py  create_installer_package.sh  crm_install_log.txt  data.db.backup_test  docker-compose.yml  fix_attachment_paths.py  fix_missing_columns.py  fix_user_columns.py  force_fix_paths.py  get_test_url.py  (+35 more)
alembic/: env.py
app/: __init__.py  main.py
deployment/: create_package.bat  create_package.sh  crm-backend.service  install.sh
docs/: BACKUP_SYSTEM.md  CALENDAR_QUICK_START.md  CALENDAR_USER_COLORS_FEATURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_UBUNTU.md  EMAIL_REPLY_SYSTEM_COMPLETE.md  EMAIL_TICKET_QUICK_GUIDE.md  EMAIL_TO_TICKET_SETUP.md  GITHUB_AUTO_UPDATE.md  GIT_SETUP_INSTRUCTIONS.md  GOOGLE_SETUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_README.md  INSTALLER_UPDATE_SUMMARY.md  INSTALL_WINDOWS.md  PACKAGE_README.md  PROJECT_ASSIGNMENT_SYSTEM.md  PROJECT_MEMBER_INVITATION.md  (+14 more)
(+132 files in other folders)
